--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.0.2",
+    "@mantine/dates": "^5.1.1",
     "@mantine/hooks": "^5.0.2",
     "@mantine/next": "^5.0.2",
     "axios": "^0.27.2",
